# mini-webui

./: .env.example  .gitignore  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  svelte.config.js  tailwind.config.js  vite.config.ts
backend/mini_webui/: __init__.py  config.py  constants.py  env.py  main.py
backend/mini_webui/internal/: __init__.py  db.py
backend/mini_webui/migrations/: env.py
backend/mini_webui/migrations/versions/: 067ed2021d18_initial_migration.py  0c41e4012ba3_add_user_chat_and_message_tables.py
backend/mini_webui/models/: __init__.py  chats.py  messages.py  settings.py  users.py
backend/mini_webui/rag/: __init__.py  graph.py  preprocess.py  service.py  store.py  types.py
backend/mini_webui/routers/: admin.py  auths.py  chats.py  openai_api.py  rag.py
backend/mini_webui/utils/: __init__.py  auth.py  openai.py  security.py
scripts/: create_admin.py  create_test_admin.py  ingest_rag.py  verify_database.py
src/: app.css  app.html
src/lib/apis/: client.ts
src/lib/apis/admin/: index.ts
src/lib/apis/auths/: index.ts
src/lib/apis/chats/: index.ts
src/lib/components/chat/: GuestMessageInput.svelte  MessageInput.svelte  MessageList.svelte
src/lib/components/layout/: Sidebar.svelte
src/lib/stores/: index.ts
src/lib/utils/: markdown.ts
src/routes/: +layout.js  +layout.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/(app)/admin/: +page.svelte
src/routes/(app)/profile/: +page.svelte
src/routes/auth/: +page.svelte
